<resources>
    <string name="app_name">ProveeX</string>
    <string name="ImagenApp">TODO</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--ca-app-pub-3940256099942544/6300978111Prueba-->
    <!--ca-app-pub-5454483537308682/3054899679-->
    <!--ca-app-pub-5454483537308682/3845237161-->
    <!--ca-app-pub-5454483537308682/7700721695-->
    <!--ca-app-pub-5454483537308682/9183217963-->
    <string name="banner2_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="intersticial_ad_unit_id">ca-app-pub-5454483537308682/7700721695</string>
    <string name="intersticial2_ad_unit_id">ca-app-pub-5454483537308682/9183217963</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>

    <!--DISEÑO-->

    <!--acercade-->
    <string name="acerca1">APPLICATION FOR SUPPLIERS TO REGISTER, UPDATE, DELETE AND CONSULT THEIR PRODUCTS WITH THEIR CHARACTERISTICS. IT ALSO HAS THE CALCULATOR FUNCTION.</string>
    <string name="acerca2">IF YOU HAVE PROBLEMS OR ANY DOUBTS WITH THE APPLICATION, DO NOT HESITATE TO SEND A MESSAGE TO TECHNICAL SUPPORT. YOU CAN ALSO FIND IT IN THE CONTACT SESSION.</string>
    <string name="acerca3">VERSIÓN 1.0.3</string>
    <string name="acerca4">TECHNICAL SUPPORT</string>
    <string name="acerca5">App icon</string>

    <!--consultar-->
    <string name="con">   Products   </string>
    <string name="con1">  Code</string>
    <string name="con2">  Description</string>
    <string name="con3">  Price Cost</string>
    <string name="con4">  Sale price</string>
    <string name="con5">  Maker</string>
    <string name="con6">To update</string>
    <string name="con7">Remove</string>
    <string name="con8">Look for</string>
    <string name="con9">Look for</string>

    <!--contacto-->
    <string name="cont">matias.pereyra145@gmail.com</string>
    <string name="cont1">Matias Ezequiel Pereyra</string>
    <string name="cont2">Youtube Channel</string>

    <!--lista-->
    <string name="list">Find product</string>
    <string name="list1"> Register Product </string>
    <string name="list2"> Consult Product </string>

    <!--menu-->
    <string name="menu">Consult Product</string>
    <string name="menu1">Register Product</string>
    <string name="menu2">List of products</string>
    <string name="menu3">Calculator</string>

    <!--registro-->
    <string name="regi">Clean up</string>
    <string name="regi1">  Products  </string>
    <string name="regi2">  Code</string>
    <string name="regi3">  Description</string>
    <string name="regi4">  Price Cost</string>
    <string name="regi5">  Sale price</string>
    <string name="regi6">  Maker</string>
    <string name="regi7">Register Product</string>

    <string name="con12">Code: </string>
    <string name="con22">Description: </string>
    <string name="con32">Price Cost: </string>
    <string name="con42">Sale price: </string>
    <string name="con52">Maker: </string>

    <!--usuario-->
    <string name="us">Name: </string>
    <string name="us1">User: </string>
    <string name="us2">Password: </string>
    <string name="us3">Register</string>
    <string name="us4"> User</string>
    <string name="us5"> Password</string>
    <string name="us6"> Log in</string>
    <string name="us7"> Sign up</string>


    <!--CLASES-->

    <!--calcu-->
    <string name="c">Try this app! All your products registered on your device.</string>

    <!--consu-->
    <string name="consu">UPDATED PRODUCT</string>
    <string name="consu1">REMOVED PRODUCT</string>
    <string name="consu2">¿You want to remove this product?</string>
    <string name="consu6">YES</string>
    <string name="consu3">The Code does not exist</string>
    <string name="consu4">Product does not exist</string>
    <string name="consu5">CALCULATOR</string>

    <!--regis-->
    <string name="re">SAVED PRODUCT</string>
    <string name="re1">REMOVED PRODUCT</string>

    <!--usu-->
    <string name="usu">Please enter username and password</string>
    <string name="usu1">User not found</string>
    <string name="usu2">Hello user </string>
    <string name="usu3">Connection error</string>
    <string name="usu4">Starting...</string>
    <string name="usu5">Logging in</string>
    <string name="usu6">Fill in the fields</string>
    <string name="usu7">Registering...</string>
    <string name="usu8">Registering User</string>
    <string name="usu9">Failed to register user </string>
    <string name="usu10">User has been registered </string>

    <!--MENUS-->
    <string name="com">Share App</string>
    <string name="com1">Menú</string>
    <string name="com2">Support</string>
    <string name="com3">Information</string>
    <string name="com4">Sign off</string>

    <!--TITULOS-->
    <string name="t">Register Product</string>
    <string name="t1">List of products</string>
    <string name="t2">Consult Product</string>
    <string name="t3">Sign up</string>
    <string name="t4">Log in</string>
    <string name="t5">Calculator</string>
    <string name="t6">Information</string>
    <string name="t7">Technical support</string>


</resources>