<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_consultar_usuarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".SQLite.nuevo.ConsultarProductoN">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="90dp">

                <Button
                    android:id="@+id/lista"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/con"
                    android:gravity="center"
                    android:background="@drawable/borde2"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/campoId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/campoNombre"
                    android:background="@drawable/borde"
                    android:hint="@string/con1"/>

                <Button
                    android:id="@+id/btnCC"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bordecel"
                    android:text="@string/con8"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/campoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/campoPC"
                    android:background="@drawable/borde"
                    android:hint="@string/con2"/>

                <Button
                    android:id="@+id/btnCN"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/con9"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bordecel"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <EditText
                android:id="@+id/campoPC"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/borde"
                android:gravity="center"
                android:layout_weight="2"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/campoPV"
                android:hint="@string/con3"/>

            <EditText
                android:id="@+id/campoPV"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_weight="2"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/campoF"
                android:background="@drawable/borde"
                android:hint="@string/con4"/>

            <EditText
                android:id="@+id/campoF"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_weight="2"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:background="@drawable/borde"
                android:hint="@string/con5"/>


            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_marginBottom="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnActualizar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordeama"
                    android:text="@string/con6"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_weight="2"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="1dp"/>

                <Button
                    android:id="@+id/btnEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borde2"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/con7"
                    android:layout_weight="2"
                    android:layout_marginLeft="1dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>
</RelativeLayout>